--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "typecheck": "tsc --noEmit",
     "typewatch": "tsc --noEmit --watch"
   },
+  "type": "module",
   "license": "MIT",
   "dependencies": {
+    "html-to-text": "^9.0.5",
+    "langchain": "^0.0.96",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.238",
+    "@types/html-to-text": "^9.0.1",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@types/styled-components": "^5.1.26",
