--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,5 +7,11 @@
     "default_popup": "src/popup/index.html",
     "default_options": "src/options/index.html",
     "default_icon": "placeholder.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "js": ["src/scripts/content.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
