feat: Build in-memory vector database on popup open
- implement vector store build on popup open
- very temporary, minimal UI
- cosine-similarity-based querying for now
- this is all quite hacked together for now
- add simple mechanism to read OpenAI API key from env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": "src",
     "jsx": "react",
+    "types": ["chrome", "vite/client"],
     "target": "es2015",
+    "module": "es2022",
     "moduleResolution": "node",
     "allowJs": false,
     "esModuleInterop": true,
