--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "html-to-text": "^9.0.5",
     "langchain": "^0.0.96",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.238",
     "@types/html-to-text": "^9.0.1",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/webextension-polyfill": "^0.10.1",
     "copyright-header": "^0.4.6",
     "pre-commit": "^1.2.2",
     "typescript": "^5.0.4",
