build: Add ESLint
- adds ESLint with a sensible config
- apply fixes suggested by ESLint
- add linting script
- run linting script on commit and in build workflow
- minor renaming/reorganising of popup components

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Typecheck
         run: npm run typecheck
 
+      - name: Lint
+        run: npm run lint
+
       - name: Build extension package
         run: npm run build
 
