--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "browser-semantic-search",
+  "name": "sloth-search",
   "version": "0.1.0",
-  "description": "A browser extension for AI-powered semantic search over a page.",
+  "description": "A browser extension that provides AI-powered semantic search over web pages.",
   "author": {
     "name": "Michael Barlow"
   },
